@@ -1,3 +1,7 @@
+2020-09-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/R-CMD-check.yaml: Updated to matrix, simplified
+
 2020-09-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml (dist): Use focal for CI
